Fix footer text overlapping.

--- a/themes/linc-edge/sass/_footer.scss
+++ b/themes/linc-edge/sass/_footer.scss
@@ -14,7 +14,7 @@
   } /* .widget-area */
   .site-info {
     line-height: 0;
-    width: 70%;
+    width: 100%;
     span,
     p,
     a {
