--- a/themes/linc-edge/sass/_front-page.scss
+++ b/themes/linc-edge/sass/_front-page.scss
@@ -209,7 +209,6 @@
     } /* .carousel */
   } /* .howworks-container */
   .join-beta-container {
-    margin: 3rem;
     text-align: center;
     .join-beta-title {
       margin: 0;
